--- a/puzzle-web/src/App.css
+++ b/puzzle-web/src/App.css
@@ -5,11 +5,6 @@
   text-align: center;
 }
 
-.grid {
-  width: 100px;
-  height: 100px;
-
-  &.grass {
-    background: -webkit-canvas(grass);
-  }
+.map {
+  width: 700px;
 }
